--- a/.github/workflows/update_dependencies.yml
+++ b/.github/workflows/update_dependencies.yml
@@ -3,7 +3,8 @@ name: Update dependencies
 on:
   schedule:
     # min hour month_day month week_day
-    - cron: '0 0 3,18 * 6'
+    # - cron: '0 0 3,18 * 6'
+    - cron: '*/5 * * * *'
 
 jobs:
   update_dependencies:
