--- a/.github/workflows/update_dependencies.yml
+++ b/.github/workflows/update_dependencies.yml
@@ -5,6 +5,7 @@ on:
     # min hour month_day month week_day
     # - cron: '0 0 3,18 * 6'
     - cron: '*/5 * * * *'
+  workflow_dispatch:
 
 jobs:
   update_dependencies:
