--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,8 @@ include ':sample-android-loader'
 project(":sample-android-loader").projectDir = file("elmslie-samples/android-loader")
 include ':sample-compose-paging'
 project(":sample-compose-paging").projectDir = file("elmslie-samples/compose-paging")
+include ':sample-coroutines-loader'
+project(":sample-coroutines-loader").projectDir = file("elmslie-samples/coroutines-loader")
 include ':sample-java-notes'
 project(":sample-java-notes").projectDir = file("elmslie-samples/java-notes")
 include ':sample-kotlin-calculator'
