--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,6 +1,6 @@
 ext.versions = [
         kotlin : "1.5.21",
-        compose: "1.0.0-beta09",
+        compose: "1.0.0-rc02",
 ]
 
 ext.deps = [
@@ -20,16 +20,16 @@ ext.deps = [
                 multidex                    : "androidx.multidex:multidex:2.0.1",
         ],
         compose: [
-                activity      : "androidx.activity:activity-compose:1.3.0-beta02",
-                foundation    : "androidx.compose.foundation:foundation:1.0.0-beta09",
-                iconsCore     : "androidx.compose.material:material-icons-core:1.0.0-beta09",
-                iconsExtended : "androidx.compose.material:material-icons-extended:1.0.0-beta09",
-                material      : "androidx.compose.material:material:1.0.0-beta09",
-                runtimeRxJava2: "androidx.compose.runtime:runtime-rxjava2:1.0.0-beta09",
-                runtimeRxJava3: "androidx.compose.runtime:runtime-rxjava3:1.0.0-beta09",
+                activity      : "androidx.activity:activity-compose:1.3.0-rc02",
+                foundation    : "androidx.compose.foundation:foundation:1.0.0-rc02",
+                iconsCore     : "androidx.compose.material:material-icons-core:1.0.0-rc02",
+                iconsExtended : "androidx.compose.material:material-icons-extended:1.0.0-rc02",
+                material      : "androidx.compose.material:material:1.0.0-rc02",
+                runtimeRxJava2: "androidx.compose.runtime:runtime-rxjava2:1.0.0-rc02",
+                runtimeRxJava3: "androidx.compose.runtime:runtime-rxjava3:1.0.0-rc02",
                 swiperefresh  : "com.google.accompanist:accompanist-swiperefresh:0.13.0",
-                tooling       : "androidx.compose.ui:ui-tooling:1.0.0-beta09",
-                ui            : "androidx.compose.ui:ui:1.0.0-beta09",
+                tooling       : "androidx.compose.ui:ui-tooling:1.0.0-rc02",
+                ui            : "androidx.compose.ui:ui:1.0.0-rc02",
         ],
         rx     : [
                 rxJava2      : "io.reactivex.rxjava2:rxjava:2.2.21",
