--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -25,7 +25,7 @@ ext.deps = [
                 iconsCore     : "androidx.compose.material:material-icons-core:1.0.0-beta09",
                 iconsExtended : "androidx.compose.material:material-icons-extended:1.0.0-beta09",
                 material      : "androidx.compose.material:material:1.0.0-beta09",
-                runtimeRxJava2: "androidx.compose.runtime:runtime-rxjava2:1.0.0-beta09",
+                runtimeRxJava2: "androidx.compose.runtime:runtime-rxjava2:1.0.0",
                 runtimeRxJava3: "androidx.compose.runtime:runtime-rxjava3:1.0.0-beta09",
                 swiperefresh  : "com.google.accompanist:accompanist-swiperefresh:0.14.0",
                 tooling       : "androidx.compose.ui:ui-tooling:1.0.0-beta09",
