--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -24,7 +24,7 @@ ext.deps = [
                 foundation    : "androidx.compose.foundation:foundation:1.0.0",
                 iconsCore     : "androidx.compose.material:material-icons-core:1.0.0",
                 iconsExtended : "androidx.compose.material:material-icons-extended:1.0.0-beta09",
-                material      : "androidx.compose.material:material:1.0.0-beta09",
+                material      : "androidx.compose.material:material:1.0.0",
                 runtimeRxJava2: "androidx.compose.runtime:runtime-rxjava2:1.0.0",
                 runtimeRxJava3: "androidx.compose.runtime:runtime-rxjava3:1.0.0",
                 swiperefresh  : "com.google.accompanist:accompanist-swiperefresh:0.14.0",
