--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -22,7 +22,7 @@ ext.deps = [
         compose: [
                 activity      : "androidx.activity:activity-compose:1.3.0-beta02",
                 foundation    : "androidx.compose.foundation:foundation:1.0.0",
-                iconsCore     : "androidx.compose.material:material-icons-core:1.0.0-beta09",
+                iconsCore     : "androidx.compose.material:material-icons-core:1.0.0",
                 iconsExtended : "androidx.compose.material:material-icons-extended:1.0.0-beta09",
                 material      : "androidx.compose.material:material:1.0.0-beta09",
                 runtimeRxJava2: "androidx.compose.runtime:runtime-rxjava2:1.0.0",
