--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -39,7 +39,7 @@ ext.deps = [
         ],
         test   : [
                 jUnit5           : "org.junit.jupiter:junit-jupiter:5.8.1",
-                kotestJunitRunner: "io.kotest:kotest-runner-junit5-jvm:4.6.2",
+                kotestJunitRunner: "io.kotest:kotest-runner-junit5-jvm:5.0.0.M3",
                 kotestAssertions : "io.kotest:kotest-assertions-core:5.0.0.M3",
                 kotestProperty   : "io.kotest:kotest-property:5.0.0.M3",
         ],
