--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ env.GITHUB_REF }}
 
       - name: Ensure main branch
         run: ./.github/sh/validate_publishing_branch.sh
@@ -37,6 +39,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ env.GITHUB_REF }}
 
       - name: Update library version
         run: ./.github/sh/update_release_version.sh "libraryVersion" "$NEW_VERSION"
