--- a/elmslie-samples/android-loader/src/main/AndroidManifest.xml
+++ b/elmslie-samples/android-loader/src/main/AndroidManifest.xml
@@ -1,17 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        package="vivid.money.elmslie.samples.android.loader">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="vivid.money.elmslie.samples.android.loader">
 
     <application
-            android:name=".App"
-            android:allowBackup="false"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:supportsRtl="false"
-            android:theme="@style/AppTheme"
-            tools:ignore="GoogleAppIndexingWarning"
-            tools:replace="android:supportsRtl">
-        <activity android:name=".MainActivity"
+        android:name=".App"
+        android:allowBackup="false"
+        android:dataExtractionRules="@xml/disable_backup"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="false"
+        android:theme="@style/AppTheme"
+        tools:ignore="DataExtractionRules,GoogleAppIndexingWarning,UnusedAttribute"
+        tools:replace="android:supportsRtl">
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
