--- a/elmslie-samples/compose-paging/src/main/AndroidManifest.xml
+++ b/elmslie-samples/compose-paging/src/main/AndroidManifest.xml
@@ -3,12 +3,12 @@
     package="vivid.money.elmslie.samples.android.compose">
 
     <application
-        android:allowBackup="false"
+        android:dataExtractionRules="@xml/disable_backup"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning"
+        tools:ignore="DataExtractionRules,GoogleAppIndexingWarning,UnusedAttribute"
         tools:replace="android:supportsRtl">
         <activity
             android:name="vivid.money.elmslie.samples.android.compose.view.MainActivity"
