--- a/elmslie-samples/android-loader/build.gradle
+++ b/elmslie-samples/android-loader/build.gradle
@@ -6,6 +6,22 @@ plugins {
 android {
     buildFeatures.buildConfig = true
     defaultConfig.multiDexEnabled true
+
+    defaultConfig {
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunnerArguments["clearPackageData"] = "true"
+    }
+
+    testOptions {
+        execution = "ANDROIDX_TEST_ORCHESTRATOR"
+        unitTests.returnDefaultValues = true
+        unitTests.includeAndroidResources = true
+    }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE.md'
+        exclude 'META-INF/LICENSE-notice.md'
+    }
 }
 
 dependencies {
@@ -17,6 +33,12 @@ dependencies {
     implementation(deps.android.material)
     implementation(deps.android.multidex)
     implementation(deps.rx.rxJava2)
+
+    androidTestImplementation(deps.uitest.core)
+    androidTestImplementation(deps.uitest.junit)
+    androidTestImplementation(deps.uitest.kaspresso)
+
+    androidTestUtil(deps.uitest.orchestrator)
 }
 
 apply from: "../../gradle/junit-5.gradle"
