--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -3,7 +3,7 @@ ext.versions = [
 ]
 
 ext.deps = [
-        gradle : [
+        gradle    : [
                 androidPlugin : "com.android.tools.build:gradle:7.0.4",
                 kotlinPlugin  : "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10",
                 intellijPlugin: "org.jetbrains.intellij.plugins:gradle-intellij-plugin:1.3.0",
@@ -20,7 +20,7 @@ ext.deps = [
                 material                    : "com.google.android.material:material:1.5.0",
                 multidex                    : "androidx.multidex:multidex:2.0.1",
         ],
-        compose: [
+        compose   : [
                 activity      : "androidx.activity:activity-compose:1.4.0",
                 foundation    : "androidx.compose.foundation:foundation:1.0.5",
                 iconsCore     : "androidx.compose.material:material-icons-core:1.0.5",
@@ -47,6 +47,12 @@ ext.deps = [
                 kotestJunitRunner: "io.kotest:kotest-runner-junit5-jvm:5.1.0",
                 kotestAssertions : "io.kotest:kotest-assertions-core:5.1.0",
                 kotestProperty   : "io.kotest:kotest-property:5.1.0",
+        ],
+        uitest    : [
+                kaspresso   : "com.kaspersky.android-components:kaspresso:1.4.1",
+                orchestrator: "androidx.test:orchestrator:1.4.1",
+                junit       : "androidx.test.ext:junit:1.1.3",
+                core : "androidx.test:core:1.4.0",
         ],
         plugin    : [
                 freemarker: "org.freemarker:freemarker:2.3.31",
